; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_image.c_CalculateMipSize.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_image.c_CalculateMipSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i8*, i32)* }

@ri = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@PRINT_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Unsupported texture format %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @CalculateMipSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CalculateMipSize(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, 3
  %12 = sdiv i32 %11, 4
  %13 = load i32, i32* %6, align 4
  %14 = add nsw i32 %13, 3
  %15 = sdiv i32 %14, 4
  %16 = mul nsw i32 %12, %15
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = mul nsw i32 %17, %18
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %7, align 4
  switch i32 %20, label %33 [
    i32 139, label %21
    i32 131, label %21
    i32 144, label %21
    i32 134, label %21
    i32 146, label %21
    i32 137, label %21
    i32 143, label %24
    i32 133, label %24
    i32 142, label %24
    i32 132, label %24
    i32 138, label %24
    i32 136, label %24
    i32 140, label %24
    i32 141, label %24
    i32 145, label %24
    i32 135, label %24
    i32 129, label %27
    i32 128, label %27
    i32 130, label %30
  ]

21:                                               ; preds = %3, %3, %3, %3, %3, %3
  %22 = load i32, i32* %8, align 4
  %23 = mul nsw i32 %22, 8
  store i32 %23, i32* %4, align 4
  br label %38

24:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3, %3, %3
  %25 = load i32, i32* %8, align 4
  %26 = mul nsw i32 %25, 16
  store i32 %26, i32* %4, align 4
  br label %38

27:                                               ; preds = %3, %3
  %28 = load i32, i32* %9, align 4
  %29 = mul nsw i32 %28, 4
  store i32 %29, i32* %4, align 4
  br label %38

30:                                               ; preds = %3
  %31 = load i32, i32* %9, align 4
  %32 = mul nsw i32 %31, 8
  store i32 %32, i32* %4, align 4
  br label %38

33:                                               ; preds = %3
  %34 = load i32 (i32, i8*, i32)*, i32 (i32, i8*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 0), align 8
  %35 = load i32, i32* @PRINT_ALL, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i32 %34(i32 %35, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %36)
  store i32 0, i32* %4, align 4
  br label %38

38:                                               ; preds = %33, %30, %27, %24, %21
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
